Make sure file name is truncated

--- a/resources/scss/src/form/field/FileUpload.scss
+++ b/resources/scss/src/form/field/FileUpload.scss
@@ -88,6 +88,7 @@
 
     .neo-file-upload-filename {
         font-weight   : bold;
+        align-self    : stretch;
     }
 
     .neo-file-upload-filename, .neo-file-upload-state {
